--- a/config.yaml
+++ b/config.yaml
@@ -5,23 +5,47 @@ system:
   device_name: Dev1
   serial_name: COM1
 
+
+
+
 # Model parameters for the tracking system emitter coils. The number of coils much match the number of frequencies
 model:
-  model_type: square
+  model_name: square_model
   num_coils: 8
   num_turns: 25
   trace_length: 0.07
   trace_width: 0.0005
   trace_spacing: 0.00025
   trace_thickness: 0.0016
+  centers_x:          # Values in millimeters
+    - -93.543
+    - 0
+    - 93.543
+    - -68.55
+    - 68.55
+    - -93.543
+    - 0
+    - 93.543
+  centers_y:
+    - 93.543
+    - 68.55
+    - 93.543
+    - 0
+    - 0
+    - -93.543
+    - -68.55
+    - -93.543
+
+
+
 
 # Filter settings parameters
 filter:
   num_freqs: 8
   num_samples: 1000
-  sampling_freq: 100000
-  cutoff_freq: 0.00005
-  attenuation: 200
+  sampling_freq: 1e5
+  cutoff_freq: 1e-5
+  attenuation: 200 # dB
   window_type: chebwin
   passdc: True
   scale: True
@@ -35,7 +59,43 @@ filter:
     coil7: 32000
     coil8: 34000
 
+
+
+
+# Solver settings parameters
+solver:
+  jacobian: 2-point
+  bounds_min:
+    - -0.4                # x
+    - -0.4                # y
+    - 0.0                 # z
+    - 0.0                 # Theta (elevation)
+    - 0.0                 # Phi (azimuthal)
+  bounds_max:
+    - 0.4                 # x
+    - 0.4                 # y
+    - 0.4                 # z
+    - 3.14159265359       # Theta (elevation)
+    - 6.28318530718       # Phi (azimuthal)
+  method: trf             # Solving method
+  ftol: 2.3e-16
+  xtol: 1e-6
+  gtol: 2.3e-16
+  verbosity: 0
+  initial_cond:
+    - 0.0                 # x
+    - 0.0                 # y
+    - 0.2                 # z
+    - 0                   # Theta (elevation)
+    - 0                   # Phi (azimuthal)
+
+
+
+
 # Calibration algorithm parameters
 # Calibration data for each channel is stored in a separate file
 calibration:
-  num_points = 49
+  num_points:
+    7x7: 49
+    9x9: 81
+    lego: 49
