--- a/config.yaml
+++ b/config.yaml
@@ -3,9 +3,40 @@ system:
   system_version: anser
   device_type: nidaq
   device_name: Dev1
+  channels:
+    - 1
+    - 4
   serial_name: COM1
+  igt: True
+  igt_port: 18944
+  igt_local: True
+  update_delay: 0.01
+  print: False
+  flip_enable: False
 
-
+pinmap:
+  anser:
+    0: 4
+    1: 0
+    2: 8
+    3: 1
+    4: 9
+    5: 2
+    6: 10
+    7: 11
+    8: 3
+    9: 8
+    10: 12
+    11: 13
+    12: 5
+    13: 14
+    14: 6
+    15: 15
+    16: 7
+  duplo:
+    0: 0
+    1: 1
+    2: 4
 
 
 # Model parameters for the tracking system emitter coils. The number of coils much match the number of frequencies
@@ -42,7 +73,7 @@ model:
 # Filter settings parameters
 filter:
   num_freqs: 8
-  num_samples: 1000
+  num_samples: 250
   sampling_freq: 1e5
   cutoff_freq: 1e-5
   attenuation: 200 # dB
@@ -66,17 +97,17 @@ filter:
 solver:
   jacobian: 2-point
   bounds_min:
-    - -0.4                # x
-    - -0.4                # y
+    - -0.5                # x
+    - -0.5                # y
     - 0.0                 # z
-    - 0.0                 # Theta (elevation)
-    - 0.0                 # Phi (azimuthal)
+    - -3.14159265359                 # Theta (elevation)
+    - -9.42477796077                 # Phi (azimuthal)
   bounds_max:
-    - 0.4                 # x
-    - 0.4                 # y
-    - 0.4                 # z
+    - 0.5                 # x
+    - 0.5                 # y
+    - 0.5                 # z
     - 3.14159265359       # Theta (elevation)
-    - 6.28318530718       # Phi (azimuthal)
+    - 9.42477796077       # Phi (azimuthal)
   method: trf             # Solving method
   ftol: 2.3e-16
   xtol: 1e-6
