--- a/config/configs/config_1.yaml
+++ b/config/configs/config_1.yaml
@@ -36,7 +36,7 @@ solver:
   verbosity: 0
   xtol: 1e-06
 system:
-  channels: [1, 3]
+  channels: [1, 3, 5, 7]
   device_cal: 7x7
   device_name: Dev1
   device_type: nidaq
