--- a/config/configs/config_1.yaml
+++ b/config/configs/config_1.yaml
@@ -1,5 +1,7 @@
 calibration:
   num_points: {7x7: 49, 9x9: 81, lego: 49}
+  6DOF_theta: {1: 5, 2: 5}
+  6DOF_phi: {1: 0, 2: 180}
 filter:
   attenuation: 200
   cutoff_freq: 1e-05
@@ -37,12 +39,12 @@ solver:
   xtol: 1e-06
 system:
   channels: []
-  primary_channels: [1, 3, 5, 7]
+  primary_channels: [1, 4, 5, 8]
   device_cal: 7x7
   device_name: Dev1
   device_type: nidaq
-  flip_enable: false
-  flip_list: null
+  flip_enable: true
+  flip_list: [5,6]
   igt: false
   igt_local: true
   igt_port: 18944
