Added multiprocessing script. Each process gets its own solver with a sensor lookup table.

--- a/config/sensors/sensor_test3.yaml
+++ b/config/sensors/sensor_test3.yaml
@@ -3,7 +3,8 @@ calibration:
   2: [0, 0, 0, 0, 0, 0, 0, 0]
   3: [0, 0, 0, 0, 0, 0, 0, 0]
   4: [0, 0, 0, 0, 0, 0, 0, 0]
-  5: [0, 0, 0, 0, 0, 0, 0, 0]
+  5: [-0.0801913317218294, -0.07195621504658793, -0.06301691444674318, -0.053344601828652,
+    -0.04717665683527921, -0.03801084718164504, -0.030922704778625597, -0.024431164644371495]
   6: [0, 0, 0, 0, 0, 0, 0, 0]
   7: [0, 0, 0, 0, 0, 0, 0, 0]
   8: [0, 0, 0, 0, 0, 0, 0, 0]
@@ -18,4 +19,4 @@ calibration:
 channel: [1]
 description: ''
 dof: 5
-name: test
+name: test3
