--- a/config/sensors/sensor_test4.yaml
+++ b/config/sensors/sensor_test4.yaml
@@ -5,7 +5,8 @@ calibration:
   4: [0, 0, 0, 0, 0, 0, 0, 0]
   5: [0, 0, 0, 0, 0, 0, 0, 0]
   6: [0, 0, 0, 0, 0, 0, 0, 0]
-  7: [0, 0, 0, 0, 0, 0, 0, 0]
+  7: [-0.1168049053864226, -0.10528815200137281, -0.09274380046159615, -0.07780546396041671,
+    -0.06842836101959779, -0.0561105705443108, -0.04504909243163014, -0.03500141044157309]
   8: [0, 0, 0, 0, 0, 0, 0, 0]
   9: [0, 0, 0, 0, 0, 0, 0, 0]
   10: [0, 0, 0, 0, 0, 0, 0, 0]
@@ -16,6 +17,6 @@ calibration:
   15: [0, 0, 0, 0, 0, 0, 0, 0]
   16: [0, 0, 0, 0, 0, 0, 0, 0]
 channel: [1]
-description: ''
+description: null
 dof: 5
-name: test
+name: test4
