--- a/config/sensors/sensor_test6.yaml
+++ b/config/sensors/sensor_test6.yaml
@@ -9,7 +9,8 @@ calibration:
   8: [0, 0, 0, 0, 0, 0, 0, 0]
   9: [0, 0, 0, 0, 0, 0, 0, 0]
   10: [0, 0, 0, 0, 0, 0, 0, 0]
-  11: [0, 0, 0, 0, 0, 0, 0, 0]
+  11: [-0.09955694265534178, -0.08885924441970963, -0.07937410680176249, -0.06739173969762498,
+    -0.058308618537558816, -0.04773062827948282, -0.03930827347367988, -0.03099908521268677]
   12: [0, 0, 0, 0, 0, 0, 0, 0]
   13: [0, 0, 0, 0, 0, 0, 0, 0]
   14: [0, 0, 0, 0, 0, 0, 0, 0]
@@ -18,4 +19,4 @@ calibration:
 channel: [1]
 description: ''
 dof: 5
-name: test
+name: test6
