--- a/config/configs/config_1.yaml
+++ b/config/configs/config_1.yaml
@@ -5,12 +5,11 @@ calibration:
 filter:
   attenuation: 200
   cutoff_freq: 1e-05
-  freqs: {coil1: 20000, coil2: 22000, coil3: 24000, coil4: 26000, coil5: 28000, coil6: 30000,
-    coil7: 32000, coil8: 34000}
+  freqs: {'coil1': 18000, 'coil2': 16000, 'coil3': 14000, 'coil4': 12000, 'coil5': 10000, 'coil6': 8000, 'coil7': 6000, 'coil8': 4000}
   num_freqs: 8
   num_samples: {1: 5000, 2: 4000, 3: 1000, 4: 500}
   passdc: true
-  sampling_freq: 100000
+  sampling_freq: 38000
   scale: true
   window_type: chebwin
 model:
@@ -39,7 +38,7 @@ solver:
   xtol: 1e-06
 system:
   channels: []
-  primary_channels: [1, 3, 5, 7]
+  primary_channels: [1, 3, 5, 7, 10, 11, 13, 15]
   device_cal: 7x7
   device_name: Dev1
   device_type: nidaq
@@ -52,4 +51,4 @@ system:
   serial_name: COM1
   speed: 1
   system_version: anser
-  update_delay: 0.001
+  update_delay: 0.0001
