--- a/config/templates/config_template.yaml
+++ b/config/templates/config_template.yaml
@@ -37,7 +37,7 @@ solver:
   xtol: 1e-06
 system:
   channels: []
-  primary_channels: [1, 3, 5, 7]
+  primary_channels: [1, 3, 5, 7, 10, 11, 13, 15]
   device_cal: 7x7
   device_name: Dev3
   device_type: nidaq
